<resources>
    <string name="app_name">Kostie</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="all">TODO</string>
    <string name="title_temperature">Suhu Kostie</string>
    <string name="subtitle_temperature">Temperature Status</string>
    <string name="title_humidity">Kelembapan Kostie</string>
    <string name="subtitle_humidity">Humidity Status</string>
    <string name="value_temperature">Suhu: 25.34 C°</string>
    <string name="value_humidity">Kelembapan: 40%</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="kostie">Smart Dormitory</string>
    <string name="feny">Feny Rahmasari</string>
    <string name="kelas">TT-1A</string>
</resources>