<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/topLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_humidity"
                android:textColor="@color/black_900"
                android:textSize="36sp"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/subtitleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/subtitle_humidity"
                android:textColor="@color/black_100"
                android:textSize="18sp"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

        <ImageView
            android:id="@+id/menuImageView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="0"
            android:contentDescription="@string/all"
            app:srcCompat="@drawable/ic_settings"
            tools:ignore="ImageContrastCheck" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/centerLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topLinearLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/humidityProgressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="340dp"
                android:layout_height="340dp"
                android:contentDescription="@string/all"
                android:max="120"
                android:background="@drawable/ic_circular_background"
                android:progressDrawable="@drawable/ic_circular_progress"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="240dp"
                android:layout_height="240dp"
                android:contentDescription="@string/all"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_dasharray"
                tools:ignore="ImageContrastCheck" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="68dp"
                android:layout_height="100dp"
                android:contentDescription="@string/all"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_humidity"
                tools:ignore="ImageContrastCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>
        <TextView
            android:id="@+id/humidityTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/value_humidity"
            android:textColor="@color/black_900"
            android:textSize="32sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>