<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="20dp"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/topLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Dashboard"
                android:textColor="@color/black_900"
                android:textSize="36sp"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/subtitleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="status"
                android:textColor="@color/black_100"
                android:textSize="18sp"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

        <ImageView
            android:id="@+id/menuImageView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="0"
            android:contentDescription="@string/all"
            app:srcCompat="@drawable/ic_settings"
            tools:ignore="ImageContrastCheck" />
    </LinearLayout>

    <View
        android:id="@+id/garis2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/purple_500"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topLinearLayout"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/centerLinearLayout1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/garis2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/temperatureProgressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="31dp"
                android:layout_height="0dp"
                android:layout_marginStart="67dp"
                android:layout_marginTop="13dp"
                android:layout_marginBottom="11dp"
                android:max="50"
                android:progressDrawable="@drawable/ic_vertical_progress"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/thermometerImageView"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/thermometerImageView"
                android:layout_width="184dp"
                android:layout_height="146dp"
                android:contentDescription="@string/all"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_thermometer" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/temperatureTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/value_temperature"
            android:textColor="@color/black_900"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/centerLinearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/centerLinearLayout1"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/garis2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/humidityProgressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:background="@drawable/ic_circular_background"
                android:contentDescription="@string/all"
                android:max="100"
                android:progressDrawable="@drawable/ic_circular_progress"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:contentDescription="@string/all"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_dasharray"
                tools:ignore="ImageContrastCheck" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="30dp"
                android:layout_height="60dp"
                android:contentDescription="@string/all"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_humidity"
                tools:ignore="ImageContrastCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/humidityTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/value_humidity"
            android:textColor="@color/black_900"
            android:textSize="24sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/lampu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:scaleType="centerInside"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/centerLinearLayout2"
        app:srcCompat="@drawable/lamp_on" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/on"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="30dp"
        android:text="ON"
        android:textColor="@color/white"
        android:backgroundTint="@color/purple_700"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lampu" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/off"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/black_700"
        android:text="OFF"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/on"
        app:layout_constraintTop_toBottomOf="@+id/lampu" />

</androidx.constraintlayout.widget.ConstraintLayout>